fix width overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  width: 100vw;
+  /* width: 100vw; */
   height: 45vh;
 }
 /* font-family: 'Archivo Black', sans-serif;
